[package]
name = "kvs"
version = "0.1.0"
authors = [""]
description = "A key-value store"
edition = "2018"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
criterion = "0.5.1"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
thiserror = "2.0.6"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
